Generate semantic DBs for Java sources too